--- a/home.html
+++ b/home.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.webp">
     <link rel="stylesheet" href="styles.css">
-    <script src="gtfs-realtime.browser.proto.js"></script> 
-    <script></script>
 <style>
 
 
@@ -21,9 +19,6 @@
 </head>
 
 <body>
-    <div id="viewDiv">
-        <div id="countdownTimer" class="countdownTimer"></div>
-    </div>
 
     <div class="topnav">
         <a href ="dawitWorld.html"><img src = "blogo.png"  class="logo">
@@ -34,6 +29,8 @@
         <a href="#about" class="split"></a>
     </div>
    
+
+    <script src="gtfs-rt.js"></script> 
 
 
 </body>
